# pytest-playwright

./: .gitignore  README.md  pyproject.toml  pytest.ini  runner.py
automation_framework/: conftest.py
automation_framework/config/: settings.py
automation_framework/config/environments/: base.py  uat.py
automation_framework/core/: base_page.py  decorators.py  page_factory.py
automation_framework/features/: access_selenium.feature
automation_framework/pytest_playwright_automation_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
automation_framework/steps/: test_selenium_home_steps.py
automation_framework/web/locators/common/: selenium_home_locators.py
automation_framework/web/pages/common/: selenium_home_page.py
reports/: report.html
