[project]
name = "pytest-playwright-automation-framework"
version = "1.0.0"
description = "UI Automation Framework with Playwright, Pytest, and Pytest-BDD"
authors = [
    {name = "Your Team", email = "team@company.com"},
]
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "pytest>=7.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-html>=3.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Simple package discovery - only include directories with __init__.py
[tool.setuptools.packages.find]
where = ["automation_framework"]
include = ["*"]
exclude = [
    "tests*",
    "reports*", 
    "features*",
    "build*",
    "dist*",
    "*.egg-info*",
]